# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: github_actions.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: base.html  index.html  url_info.html  urls.html
page_analyzer/tests/: test_page_analyzer.py
